--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 *.css.map
 dsa.*
+Easy-Buttons.css
+Easy-Buttons.scss
+Easy-Inputs.css
+Easy-Inputs.scss
+Easy.css
+Easy.scss
+Easy-Inputs.min.scss
+Easy-Buttons.min.scss
